--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 title               : Tyler Smithline Portfolio
 description         : >-
                       Hi, I’m Tyler. I’m a roboticist with a strong interest in computer vision, machine learning, and mechatronics. test
-# url                 : "tylersmithline.com"
+url                 : "tylersmithline.com"
+# url: "https://tyler5x.github.io"
 baseurl             : ""            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : tyler5x/tyler5x.github.io      # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : yousinix/portfolYOU
