trying to fix image

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Tyler Smithline
-  image             : media/headshot.jpg
+  image             : media/Headshot.jpg
   # behance           : your_username
 # dribbble          : your_username
   email             : tylersmithline@gmail.com
