added tumble dry

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ### Site Settings ###
-title               : Tyler Smithline Portfolio
+title               : Tyler Smithline's Portfolio
 description         : >-
                       Hi, I’m Tyler. I’m a roboticist with a strong interest in computer vision, machine learning, and mechatronics. 
                       I love working at the intersection of software and hardware to make things work. This portfolio covers the 
